# Hs2010To201x

./: .gitignore  .travis.yml  Hs2010To201x.cabal  LICENSE  README.md
src/: Main.hs  Transform.hs
src/Language/Haskell/Migrate/: MRP.hs
test/: .ghci  MRPSpec.hs  TransformSpec.hs
testcases/H2010/: Maybe1.expected.hs  Maybe1.hs  Maybe2.hs  Maybe3.expected.hs  Maybe3.hs
testcases/H201x/: Maybe1.hs  Maybe2.hs
