name:                Hs2010To201x
version:             0.1.0.0
synopsis:            Automatically update a project from haskell2010 to haskell201x
description:         Automatically update a project from haskell2010 to haskell201x
homepage:            https://github.com/hvr/Hs2010To201x
license:             BSD3
license-file:        LICENSE
author:              Alan Zimmerman
maintainer:          alan.zimm@gmail.com
-- copyright:           
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable Hs2010To201x
  main-is:             Main.hs
  -- other-modules:       
  build-depends:
      -- GHC 7.10.2 ships with base 4.8.1.0
      base        >= 4.8.1.0  && < 4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
  if impl (ghc < 7.10.2)
    buildable: False

test-suite spec
  type:
      exitcode-stdio-1.0
  cpp-options:
      -DTEST
  main-is:
      Spec.hs
  Hs-Source-Dirs:
   src
   test
  other-modules:
      TransformSpec
  build-depends:
      -- GHC 7.10.2 ships with base 4.8.1.0
      base        >= 4.8.1.0  && < 4.9
    , containers
    , Diff >= 0.3.0
    , HUnit
    , directory
    , filepath
    , ghc
    , ghc-exactprint >= 0.4.1
    , ghc-paths
    , ghc-prim
    , ghc-syb-utils
    , hspec
    , syb
  default-language:    Haskell2010
  if impl (ghc < 7.10.2)
    buildable: False

source-repository head
  type:     git
  location: https://github.com/alanz/Hs2010To201x.git

